--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -10079,7 +10079,16 @@ form.contact-form .checkbox {
   padding-right: 30px;
 }
 
-.file-component .element-file-input-container .element-file-content {
+.file-component .element-file-input-container .element-file-content.has-color .value-container {
+  padding: 3px 10px;
+  border-radius: 3px;
+}
+
+.file-component .element-file-input-container .element-file-content .value-container {
+  display: inline-block;
+}
+
+.file-component .element-file-input-container .element-file-content .value-content {
   font-size: 14px;
   line-height: 19px;
   font-weight: 400;
@@ -10636,6 +10645,13 @@ form.contact-form .checkbox {
   padding-left: 10px;
 }
 
+.ReactTable .rt-tbody .has-color {
+  padding: 2px 5px;
+  border-radius: 3px;
+  overflow: hidden;
+  font-size: 12px;
+}
+
 .ReactTable .rt-thead {
   padding-top: 6px;
   padding-bottom: 6px;
@@ -10838,13 +10854,22 @@ form.contact-form .checkbox {
 }
 
 .static-banner .image-static-banner {
-  height: 200px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  position: absolute;
+  height: 100%;
+}
+
+@media (max-width: 70.85714286em) {
+  .static-banner .image-static-banner {
+    height: 290px;
+    position: unset;
+  }
 }
 
 .static-banner .text-static-banner {
+  float: right;
   padding: 20px;
 }
 
