--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9025,8 +9025,7 @@ header:first-child .row.row-header .logo-container,
 .content-wrapper,
 .sidebar,
 .sidebar.collapsed ul li i,
-.form-component.element-form-wrapper,
-body input.form-control.text-field.bordered {
+.form-component.element-form-wrapper {
   transition: all 0.5s ease;
 }
 
@@ -9084,8 +9083,7 @@ header:first-child .row.row-header .logo-container,
 .content-wrapper,
 .sidebar,
 .sidebar.collapsed ul li i,
-.form-component.element-form-wrapper,
-body input.form-control.text-field.bordered {
+.form-component.element-form-wrapper {
   transition: all 0.5s ease;
 }
 
@@ -11188,207 +11186,5 @@ body .total-box-container .container-parameters {
 
 .env-bar .envirnment-button.rec i {
   color: #3599e8;
-}
-
-.fields-list-container {
-  padding: 15px;
-  width: 100%;
-  text-align: center;
-}
-
-.fields-list-container .typology-field {
-  border: 1px solid #ccc;
-  position: relative;
-  height: 50px;
-  overflow: hidden;
-  margin-bottom: 15px;
-  background-color: #ffffff;
-  border-radius: 6px;
-}
-
-.fields-list-container .typology-field .field-type {
-  width: 60px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  font-size: 14px;
-  line-height: 50px;
-  font-weight: 500;
-  text-align: left;
-}
-
-.fields-list-container .typology-field .field-type .type-info {
-  position: absolute;
-  top: 0;
-  right: 20px;
-}
-
-.fields-list-container .typology-field .field-type i.fa {
-  position: absolute;
-  top: 12px;
-  left: 18px;
-  font-size: 22px;
-  padding-right: 10px;
-  color: #b4b4b4;
-}
-
-.fields-list-container .typology-field .field-labels {
-  position: relative;
-  padding-right: 200px;
-  padding-top: 2px;
-  line-height: 40px;
-  padding-left: 60px;
-}
-
-.fields-list-container .typology-field .field-actions {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 190px;
-}
-
-.fields-list-container .typology-field .field-actions a {
-  font-size: 12px;
-  line-height: 50px;
-  font-weight: 400;
-  display: inline-block;
-}
-
-.fields-list-container .typology-field .remove-field-btn {
-  color: #fc4b6c;
-}
-
-.container-radio-field {
-  width: 100%;
-  padding: 0;
-}
-
-.container-radio-field .MuiFormGroup-root {
-  display: inline;
-}
-
-.container-radio-field .MuiFormGroup-root .MuiFormControlLabel-root {
-  border: 1px solid #ccc;
-  padding: 0px 10px 0px 25px;
-  margin-right: 16px;
-  margin-left: 0px;
-}
-
-.container-radio-field .MuiFormGroup-root .MuiFormControlLabel-root .Mui-checked {
-  color: #8db7f7;
-}
-
-.container-radio-field .bordered {
-  border: 1px solid #8db7f7 !important;
-}
-
-.border-radius {
-  border-radius: 50%;
-}
-
-.check-field .MuiCheckbox-root .MuiIconButton-label {
-  padding: 10px 0px 10px 0px;
-}
-
-.layout .container-fields-default .value-center {
-  margin-bottom: 10px !important;
-}
-
-.layout .container-fields-default .stripped:nth-of-type(odd) {
-  background-color: #f8f9fa;
-}
-
-.layout .container-fields-default .stripped:nth-of-type(even) {
-  background-color: #fff;
-}
-
-.btn-rounded {
-  border-radius: 20px;
-}
-
-.container-fields-default {
-  padding: 0;
-}
-
-.container-fields-default.border-right {
-  border-right: 1px solid #333;
-}
-
-body input.form-control.text-field {
-  border-radius: 0;
-}
-
-body input.form-control.text-field.bordered {
-  border: 1px solid #77a9f4;
-}
-
-body input.form-control.text-field:focus {
-  border-color: #77a9f4;
-  box-shadow: none;
-}
-
-.yes-no-field {
-  margin: 20px 0px 20px 0px;
-  align-items: center;
-  display: flex;
-}
-
-.yes-no-field .container-text {
-  width: calc(100% - 240px);
-  display: inline-block;
-}
-
-.yes-no-field .container-fields-yes-no {
-  text-align: right;
-  width: 240px;
-  display: inline-block;
-  position: relative;
-}
-
-.yes-no-field div {
-  padding: 0;
-}
-
-.yes-no-field .MuiFormControlLabel-root {
-  margin-bottom: 0;
-}
-
-#modal-add-document .modal-header {
-  padding-left: 45px;
-}
-
-#modal-add-document .modal-content {
-  padding-top: 25px;
-}
-
-#modal-add-document .modal-content .yes-no-field .container-text {
-  width: calc(100% - 240px);
-  display: inline-block;
-}
-
-#modal-add-document .modal-content .yes-no-field .container-fields-yes-no {
-  text-align: right;
-  width: 240px;
-  display: inline-block;
-  position: relative;
-}
-
-#modal-add-document .modal-footer {
-  text-align: center;
-}
-
-#modal-add-document .modal-container.small {
-  width: 75%;
-  margin: 0 auto;
-}
-
-#modal-add-document .modal-container.medium {
-  width: 85%;
-  margin: 0 auto;
-}
-
-#modal-add-document .modal-container.large {
-  width: 100%;
-  margin: 0 auto;
 }
 
