--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9873,6 +9873,16 @@ form.contact-form .checkbox {
   margin-top: 30px !important;
 }
 
+#preload-form .buttons {
+  width: 30%;
+  margin-top: 0;
+  padding-bottom: 0;
+}
+
+#preload-form .element-form-row .col-sm-6 {
+  width: 60%;
+}
+
 /** DATE  **/
 
 .react-datepicker-popper {
@@ -10884,7 +10894,7 @@ body .total-box-container .container-parameters {
 }
 
 .box-button-container i {
-  font-size: 48px;
+  font-size: 40px;
   line-height: 40px;
   margin-bottom: 5px;
 }
@@ -11004,6 +11014,112 @@ body .total-box-container .container-parameters {
 .static-banner .text-static-banner h1,
 .static-banner .text-static-banner h2 {
   margin-top: 0px;
+}
+
+.stepper-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.stepper-item {
+  position: relative;
+  cursor: pointer;
+}
+
+.stepper-item#stepper-item-completed .stepper-item-outer {
+  background-color: #69a8ff;
+  border: 3px solid #69a8ff;
+}
+
+.stepper-item#stepper-item-completed .stepper-title:not(.stepper-title-active) {
+  color: #69a8ff;
+}
+
+.stepper-item .stepper-item-outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.stepper-item .stepper-item-outer.stepper-item-outer-active {
+  border: 3px solid #69a8ff;
+}
+
+.stepper-item .stepper-item-outer .stepper-item-inner-future {
+  color: #adadad !important;
+}
+
+.stepper-item .stepper-title {
+  position: absolute;
+  display: inline-block;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 225px;
+  min-width: 225px;
+  transform: translate(-39%, 5px);
+  text-align: center;
+  color: #adadad;
+  font-size: 14px;
+  font-weight: 900;
+  margin-top: 5px;
+}
+
+.stepper-item .stepper-title-active {
+  color: #69a8ff;
+}
+
+.stepper-item-outer:nth-of-type(odd) {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.stepper-item-outer:nth-of-type(odd) .stepper-item-inner {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1px;
+  color: white;
+  font-weight: 600;
+  font-size: 17px;
+}
+
+.stepper-item-outer:nth-of-type(odd) .stepper-item-inner.stepper-item-inner-active {
+  width: 18px;
+  height: 18px;
+  color: #69a8ff;
+}
+
+.stepper-item-outer:nth-of-type(even) {
+  height: 8px;
+  border-top: 0.5px solid #e0e0e0;
+  border-bottom: 0.5px solid #e0e0e0;
+  width: 15%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.stepper-item-outer-inner {
+  background-color: #69a8ff;
+  width: 0%;
+  overflow: hidden;
+  transition: width 1s ease-in-out;
+  display: inline-block;
+  color: transparent;
+}
+
+div#stepper-item-completed + .stepper-item-outer .stepper-item-outer-inner {
+  width: 100%;
+  height: 8px;
 }
 
 .map-container .leaflet-container {
@@ -11477,6 +11593,18 @@ body .container-car-field label.bottom:before {
 
 .modal-table-component.custom-modal .form-component .modal-list-field a.close-button-modal:hover {
   border: none;
+}
+
+.form-button {
+  cursor: pointer;
+}
+
+.form-button.loading {
+  pointer-events: none;
+}
+
+.form-button .disabled {
+  opacity: 0.5;
 }
 
 .env-bar {
