--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9029,7 +9029,9 @@ header:first-child .row.row-header .logo-container,
 .box-button-container i,
 .box-button-container .wrap-box-button .image-container,
 .box-button-container .wrap-box-button .label-container,
-body input.form-control.text-field.bordered {
+body input.form-control.bordered,
+body select.form-control.bordered,
+body textarea.form-control.bordered {
   transition: all 0.5s ease;
 }
 
@@ -9091,7 +9093,9 @@ header:first-child .row.row-header .logo-container,
 .box-button-container i,
 .box-button-container .wrap-box-button .image-container,
 .box-button-container .wrap-box-button .label-container,
-body input.form-control.text-field.bordered {
+body input.form-control.bordered,
+body select.form-control.bordered,
+body textarea.form-control.bordered {
   transition: all 0.5s ease;
 }
 
@@ -9620,9 +9624,11 @@ body.is-test {
 
 .custom-modal .form-group .form-control,
 .custom-modal .form-group .cke_textarea_inline {
-  border-top: 1px solid #ccc;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  /*
+    border-top:1px solid #ccc;
+    border-left:1px solid #ccc;
+    border-right:1px solid #ccc;
+    */
   padding: 0 10px;
 }
 
@@ -10269,6 +10275,9 @@ form.contact-form .checkbox {
 
 .form-component .element-form-row {
   margin: 15px 0;
+  /**
+    *   Conditions when is form preload
+    */
 }
 
 .form-component .element-form-row label {
@@ -10280,6 +10289,7 @@ form.contact-form .checkbox {
 }
 
 .form-component .element-form-row .buttons {
+  text-align: center;
   margin-top: 20px;
   padding-bottom: 20px;
 }
@@ -10297,6 +10307,10 @@ form.contact-form .checkbox {
   background-color: #fff;
   border-color: #fff;
   color: #2A3649;
+}
+
+.form-component .element-form-row .preload-form .buttons {
+  text-align: right;
 }
 
 .form-component input.is-invalid {
@@ -10422,6 +10436,21 @@ form.contact-form .checkbox {
   border-top-right-radius: 12px;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+}
+
+/* Template */
+
+.element-form-container .layout h3 {
+  margin-bottom: 10px;
+}
+
+.element-form-container .layout .border-right {
+  border: none;
+}
+
+.element-form-container .layout .container-fields-default {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .element-table-container {
@@ -11212,6 +11241,14 @@ div#stepper-item-completed + .stepper-item-outer .stepper-item-outer-inner {
   right: 100px;
 }
 
+.check-field label {
+  float: none;
+}
+
+.check-field label span {
+  color: #77a9f4;
+}
+
 .check-field label span.MuiTypography-root {
   color: #2A3649 !important;
 }
@@ -11437,6 +11474,104 @@ body .container-car-field label.bottom:before {
   }
 }
 
+.file-field .uploaded-file {
+  border: 1px solid #77a9f4;
+  padding: 5px 10px;
+}
+
+.file-field .uploaded-file .col-xs-10 {
+  padding-left: 0;
+  line-height: 22px;
+}
+
+.file-field .uploaded-file .col-xs-2 {
+  text-align: right;
+  padding: 0;
+}
+
+.file-field .uploaded-file .col-xs-2 .btn i {
+  margin: 0;
+}
+
+.fields-list-container {
+  padding: 15px;
+  width: 100%;
+  text-align: center;
+}
+
+.fields-list-container .typology-field {
+  border: 1px solid #77a9f4;
+  position: relative;
+  height: 50px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  background-color: #ffffff;
+  border-radius: 6px;
+}
+
+.fields-list-container .typology-field .field-type {
+  width: 60px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 14px;
+  line-height: 50px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.fields-list-container .typology-field .field-type .type-info {
+  position: absolute;
+  top: 0;
+  right: 20px;
+}
+
+.fields-list-container .typology-field .field-type i.fa {
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  font-size: 22px;
+  padding-right: 10px;
+  color: #77a9f4;
+}
+
+.fields-list-container .typology-field .field-labels {
+  position: relative;
+  padding-right: 70px;
+  padding-top: 2px;
+  line-height: 40px;
+  padding-left: 60px;
+}
+
+.fields-list-container .typology-field .field-actions {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 70px;
+  padding-right: 0;
+}
+
+.fields-list-container .typology-field .field-actions a {
+  font-size: 12px;
+  line-height: 50px;
+  font-weight: 400;
+  display: inline-block;
+  font-size: 17px;
+  padding: 14px 6px;
+}
+
+.fields-list-container .typology-field .field-actions a.text-primary {
+  color: #77a9f4;
+}
+
+.fields-list-container .typology-field .remove-field-btn {
+  color: #fc4b6c;
+}
+
+.fields-list-container .more-btn a {
+  background-color: #fff;
+}
+
 .paginator ul li {
   display: inline-block;
   padding: 0 8px;
@@ -11645,74 +11780,6 @@ body .container-car-field label.bottom:before {
   color: #3599e8;
 }
 
-.fields-list-container {
-  padding: 15px;
-  width: 100%;
-  text-align: center;
-}
-
-.fields-list-container .typology-field {
-  border: 1px solid #ccc;
-  position: relative;
-  height: 50px;
-  overflow: hidden;
-  margin-bottom: 15px;
-  background-color: #ffffff;
-  border-radius: 6px;
-}
-
-.fields-list-container .typology-field .field-type {
-  width: 60px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  font-size: 14px;
-  line-height: 50px;
-  font-weight: 500;
-  text-align: left;
-}
-
-.fields-list-container .typology-field .field-type .type-info {
-  position: absolute;
-  top: 0;
-  right: 20px;
-}
-
-.fields-list-container .typology-field .field-type i.fa {
-  position: absolute;
-  top: 12px;
-  left: 18px;
-  font-size: 22px;
-  padding-right: 10px;
-  color: #b4b4b4;
-}
-
-.fields-list-container .typology-field .field-labels {
-  position: relative;
-  padding-right: 200px;
-  padding-top: 2px;
-  line-height: 40px;
-  padding-left: 60px;
-}
-
-.fields-list-container .typology-field .field-actions {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 190px;
-}
-
-.fields-list-container .typology-field .field-actions a {
-  font-size: 12px;
-  line-height: 50px;
-  font-weight: 400;
-  display: inline-block;
-}
-
-.fields-list-container .typology-field .remove-field-btn {
-  color: #fc4b6c;
-}
-
 .container-radio-field {
   width: 100%;
   padding: 0;
@@ -11777,15 +11844,21 @@ body .container-car-field label.bottom:before {
   border-bottom: 1px solid #ccc;
 }
 
-body input.form-control.text-field {
+body input.form-control,
+body select.form-control,
+body textarea.form-control {
   border-radius: 0;
 }
 
-body input.form-control.text-field.bordered {
+body input.form-control.bordered,
+body select.form-control.bordered,
+body textarea.form-control.bordered {
   border: 1px solid #77a9f4;
 }
 
-body input.form-control.text-field:focus {
+body input.form-control:focus,
+body select.form-control:focus,
+body textarea.form-control:focus {
   border-color: #77a9f4;
   box-shadow: none;
 }
