--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -9238,7 +9238,7 @@ header {
 
 header .session-changer {
   margin-top: -8px;
-  background-color: #e7eaef;
+  background-color: transparent;
   border: 1px solid #2a3649;
 }
 
